--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   marquee: ^2.3.0
+  wakelock_plus: ^1.2.10
 
 dev_dependencies:
   flutter_test:
