--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,8 @@ dependencies:
   get: ^4.7.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  marquee: ^2.3.0
   wakelock_plus: ^1.2.10
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
