--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   hive_flutter: ^1.1.0
   wakelock_plus: ^1.2.10
   google_fonts: ^6.2.1
+  vibration: ^3.1.3
 
 dev_dependencies:
   flutter_test:
