--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   wakelock_plus: ^1.2.10
   google_fonts: ^6.2.1
   vibration: ^3.1.3
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
