--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   wakelock_plus: ^1.2.10
-  google_fonts: ^6.2.1
   vibration: ^3.1.3
   uuid: ^4.5.1
 
@@ -96,3 +95,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+  fonts:
+    - family: NexaRegular
+      fonts:
+        - asset: assets/fonts/Nexa-Regular.OTF
