--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,6 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
   fonts:
-    - family: NexaRegular
+    - family: NotoSans-Regular
       fonts:
-        - asset: assets/fonts/Nexa-Regular.OTF
+        - asset: assets/fonts/NotoSans-Regular.ttf
