--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   wakelock_plus: ^1.2.10
   vibration: ^3.1.3
   uuid: ^4.5.1
+  flutter_native_splash: ^2.4.4
 
 dev_dependencies:
   flutter_test:
