--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,6 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
   get: ^4.7.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
@@ -41,6 +40,7 @@ dependencies:
   vibration: ^3.1.3
   uuid: ^4.5.1
   flutter_native_splash: ^2.4.4
+  lottie: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -100,3 +100,5 @@ flutter:
     - family: NotoSans-Regular
       fonts:
         - asset: assets/fonts/NotoSans-Regular.ttf
+  assets:
+      - assets/lotties/cat_1.json
