--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   uuid: ^4.5.1
   flutter_native_splash: ^2.4.4
   lottie: ^3.0.0
+  google_mobile_ads: ^6.0.0
+  firebase_analytics: ^11.4.5
 
 dev_dependencies:
   flutter_test:
