--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -54,4 +54,4 @@ jobs:
         path: |
           build/app/outputs/flutter-apk/app-release.apk
           build/app/outputs/bundle/release/app-release.aab
-        if-no-files-found: error
+        if-no-files-found: warn
