Update build_android.yml to make the branch input optional and change its type from choice to string for improved flexibility in build configurations.

--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -13,12 +13,9 @@ on:
         - appbundle
       branch:
         description: 'Branch to build from'
-        required: true
+        required: false
         default: 'main'
-        type: choice
-        options:
-          - main
-          - ads
+        type: string
       flavor:
         description: 'Product flavor (optional)'
         required: false
