Update build_android.yml to make the branch input required and change its type to choice with specific options for improved build configuration clarity.

--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -13,9 +13,12 @@ on:
         - appbundle
       branch:
         description: 'Branch to build from'
-        required: false
+        required: true
         default: 'main'
-        type: string
+        type: choice
+        options:
+          - main
+          - ads
       flavor:
         description: 'Product flavor (optional)'
         required: false
