--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -14,7 +14,7 @@ flutter_native_splash:
   # of your splash screen to a solid color.  Use background_image to set the background of your
   # splash screen to a png image.  This is useful for gradients. The image will be stretch to the
   # size of the app. Only one parameter can be used, color and background_image cannot both be set.
-  #color: "#42a5f5"
+  color: "#F5F5F5"
   background_image: "assets/background.png"
 
   # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing
@@ -42,7 +42,7 @@ flutter_native_splash:
   # parameters from above.  If there is no parameter above, the app will use the light mode values.
   # If the image_dark parameter is specified, color_dark or background_image_dark must be specified.  
   # color_dark and background_image_dark cannot both be set.
-  #color_dark: "#042a49"
+  color_dark: "#121212"
   #background_image_dark: "assets/dark-background.png"
   #image_dark: assets/splash-invert.png
   #branding_dark: assets/dart_dark.png
@@ -63,7 +63,7 @@ flutter_native_splash:
     image: assets/android12splash.png
 
     # Splash screen background color.
-    color: "#2CD4FF"
+    #color: "#2CD4FF"
 
     # App icon background color.
     #icon_background_color: "#111111"
@@ -86,7 +86,7 @@ flutter_native_splash:
 
   # Platform specific images can be specified with the following parameters, which will override
   # the respective parameter.  You may specify all, selected, or none of these parameters:
-  color_android: "#2CD4FF"
+  #color_android: "#2CD4FF"
   #color_dark_android: "#042a49"
   #color_ios: "#42a5f5"
   #color_dark_ios: "#042a49"
