--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -14,15 +14,15 @@ flutter_native_splash:
   # of your splash screen to a solid color.  Use background_image to set the background of your
   # splash screen to a png image.  This is useful for gradients. The image will be stretch to the
   # size of the app. Only one parameter can be used, color and background_image cannot both be set.
-  color: "#F5F5F5"
-  background_image: "assets/background.png"
+  #color: "#F5F5F5"
+  #background_image: "assets/background.png"
 
   # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing
   # the leading # character.
 
   # The image parameter allows you to specify an image used in the splash screen.  It must be a
   # png file and should be sized for 4x pixel density.
-  #image: assets/splash.png
+  #image: assets/android12splash.png
 
   # The branding property allows you to specify an image used as branding in the splash screen.
   # It must be a png file. It is supported for Android, iOS and the Web.  For Android 12,
@@ -42,7 +42,7 @@ flutter_native_splash:
   # parameters from above.  If there is no parameter above, the app will use the light mode values.
   # If the image_dark parameter is specified, color_dark or background_image_dark must be specified.  
   # color_dark and background_image_dark cannot both be set.
-  color_dark: "#121212"
+  #color_dark: "#121212"
   #background_image_dark: "assets/dark-background.png"
   #image_dark: assets/splash-invert.png
   #branding_dark: assets/dart_dark.png
@@ -63,7 +63,7 @@ flutter_native_splash:
     image: assets/android12splash.png
 
     # Splash screen background color.
-    #color: "#2CD4FF"
+    color: "#9091F8"
 
     # App icon background color.
     #icon_background_color: "#111111"
@@ -98,9 +98,9 @@ flutter_native_splash:
   #image_dark_ios: assets/splash-invert-ios.png
   #image_web: assets/splash-web.gif
   #image_dark_web: assets/splash-invert-web.gif
-  #background_image_android: "assets/background-android.png"
+  background_image_android: "assets/background.png"
   #background_image_dark_android: "assets/dark-background-android.png"
-  #background_image_ios: "assets/background-ios.png"
+  background_image_ios: "assets/background.png"
   #background_image_dark_ios: "assets/dark-background-ios.png"
   #background_image_web: "assets/background-web.png"
   #background_image_dark_web: "assets/dark-background-web.png"
