--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
   wakelock_plus: ^1.2.10
   vibration: ^3.1.3
   uuid: ^4.5.1
-  flutter_native_splash: ^2.4.4
   lottie: ^3.0.0
   google_mobile_ads: ^6.0.0
   firebase_analytics: ^11.4.5
@@ -57,6 +56,7 @@ dev_dependencies:
   hive_generator: ^2.0.1
   build_runner: ^2.4.8
   flutter_launcher_icons: ^0.14.3
+  flutter_native_splash: ^2.4.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -105,6 +105,7 @@ flutter:
         - asset: assets/fonts/NotoSans-Regular.ttf
   assets:
       - assets/lotties/cat_1.json
+      - assets/Icon/Icon.png
 
 flutter_launcher_icons:
   #  image_path: "assets/images/icon-128x128.png"
