Update Lottie assets and translations for data readiness
- Replaced the Lottie asset from `cat_1.json` to `no_data.json` in `pubspec.yaml` and updated the corresponding references in `constants.dart`.
- Removed the `cat_1.json` file from the project.
- Added a new translation key `dataIsReady` across multiple language files to indicate when data is ready for use.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,7 +104,7 @@ flutter:
       fonts:
         - asset: assets/fonts/NotoSans-Regular.ttf
   assets:
-      - assets/lotties/cat_1.json
+      - assets/lotties/no_data.json
       - assets/Icon/Icon.png
 
 flutter_launcher_icons:
