--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_mobile_ads: ^6.0.0
   firebase_analytics: ^11.4.5
   flutter_native_splash: ^2.4.4
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -106,6 +107,7 @@ flutter:
   assets:
       - assets/lotties/no_data.json
       - assets/Icon/Icon.png
+      - assets/logo.png
 
 flutter_launcher_icons:
   #  image_path: "assets/images/icon-128x128.png"
