--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -88,4 +88,6 @@ jobs:
         appId: ${{ secrets.FIREBASE_APP_ID }} # 你的Firebase应用ID
         token: ${{ secrets.FIREBASE_TOKEN }} # 之前获取的Firebase token
         groups: StrikingLED # 分发组，可以是多个组用逗号分隔
-        file: build/app/outputs/apk/release/app-release.apk # APK路径
+        file: |
+          build/app/outputs/flutter-apk/app-release.apk
+          build/app/outputs/bundle/release/app-release.aab
